--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Active2" android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Lists"></activity>
+        <activity
+            android:name=".Active2"
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".Active1" />
         <activity android:name=".DisplayMessageActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Popup">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
