--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.nicho">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Lists"></activity>
+        <activity android:name=".LinearActivity"></activity>
+        <activity android:name=".Recycler" />
+
+        <receiver
+            android:name=".Mine"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".Lists" />
         <activity
             android:name=".Active2"
             android:parentActivityName=".MainActivity" />
